--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3006 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -34,5 +34,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "framer-motion": "^5.3.0",
+    "react-intersection-observer": "^8.32.2",
+    "react-router-dom": "^6.0.2",
+    "styled-components": "^5.3.3"
   }
 }
